--- a/brief/style.css
+++ b/brief/style.css
@@ -140,12 +140,12 @@ button {
 }
 
 .ingredients-list {
-	width: 50%;
+	width: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: start;
-	font-size: 12px;
+	font-size: 14px;
 	list-style: circle;
-	padding: 20px 20px;
-	margin-right: 50%;
+	padding: 20px 50px;
+	gap: 10px;
 }
