--- a/styles.css
+++ b/styles.css
@@ -1,64 +1,77 @@
 * {
-    font-family: "Open Sans", sans-serif;
-    margin: 0;
-    padding: 0;
+	font-family: "Open Sans", sans-serif;
+	margin: 0;
+	padding: 0;
 }
 
 body {
-    background: #FFFFFF;
-    color: #4CAF50;
+	background: #ffffff;
+	color: #4caf50;
 }
 
 .logo {
-    width: 30%;
-    height: auto;
+	width: 30%;
+	height: auto;
 }
 
 .hero {
-    text-align: center;
-    color: black;
-}  
+	text-align: center;
+	color: black;
+}
 
 .hero div {
-    padding: 50px;
-    border-radius: 10px;
-    max-width: 100vw;
-    background-image: url('im2.jpg');
-    background-position: center top;
-    background-size: cover;
+	padding: 50px;
+	border-radius: 10px;
+	max-width: 100vw;
+	background-image: url("/assets/im2.jpg");
+	background-position: center top;
+	background-size: cover;
 }
 
 .hero p {
-    font-size: 1.5em;
-    margin: 20px 0;
+	font-size: 1.5em;
+	margin: 20px 0;
 }
 
 .cta-button {
-    display: inline-block;
-    padding: 10px 20px;
-    background: #ff7300;
-    color: white;
-    border-radius: 5px;
-    text-decoration: none;
+	display: inline-block;
+	padding: 10px 20px;
+	background: #ff7300;
+	color: white;
+	border-radius: 5px;
+	text-decoration: none;
+}
+
+#brief-link {
+	width: 100vw;
+	height: 10vh;
+  margin: 5vh 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+#brief-btn {
+  font-size: 1.5em;
 }
 
 h2 {
-    text-align: center;
-    margin: 120px 0 40px 0;
-    color: #4CAF50;
+	text-align: center;
+	margin: 120px 0 40px 0;
+	color: #4caf50;
 }
 
 h3 {
-    text-align: center;
-    margin: 20px 0;
-    color: #FFFFFF;
+	text-align: center;
+	margin: 20px 0;
+	color: #ffffff;
 }
 
 .features {
-    max-width: 100vw;
-    text-align: center;
-    padding: 40px;
-    display: flex
+	max-width: 100vw;
+	text-align: center;
+	padding: 40px;
+	display: flex;
 }
 
 /* .feature {
@@ -77,146 +90,146 @@ h3 {
 } */
 
 .faq {
-    padding: 20px;
+	padding: 20px;
 }
 
 details {
-    background: #ff7300;
-    color: white;
-    padding: 10px;
-    border-radius: 5px;
-    margin: 10px 0;
+	background: #ff7300;
+	color: white;
+	padding: 10px;
+	border-radius: 5px;
+	margin: 10px 0;
 }
 details summary {
-    cursor: pointer;
+	cursor: pointer;
 }
 details[open] p {
-    padding:20px 50px;
+	padding: 20px 50px;
 }
 
 #contact {
-    background: #4CAF50;
-    color: white;
-    padding: 40px;
-    text-align: center;
+	background: #4caf50;
+	color: white;
+	padding: 40px;
+	text-align: center;
 }
 
-input, textarea {
-    display: block;
-    width: 80%;
-    margin: 10px auto;
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
+input,
+textarea {
+	display: block;
+	width: 80%;
+	margin: 10px auto;
+	padding: 10px;
+	border: none;
+	border-radius: 5px;
 }
 
 button {
-    padding: 10px 20px;
-    background: #ff7300;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+	padding: 10px 20px;
+	background: #ff7300;
+	color: white;
+	border: none;
+	border-radius: 5px;
+	cursor: pointer;
 }
 
-
 .card {
-    margin:0 auto;
-    width:40%;
-    height:320px;
-    text-align: center;
-  }
-  
-  .card-inner {
-    position:relative;
-    width: 100%;
-    height:100%;
-    transition: transform 0.6s;
-    transform-style: preserve-3d;
-    
-  }
-  
-  .card:hover .card-inner {
-    transform: rotateY(180deg);
-  }
-  
-  .card-front, .card-back {
-    position:absolute;
-    height:100%;
-    width: 100%;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    border-radius:8px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  }
-  
-  .card-front {
-    background-size:cover;
-    background-position:center center; 
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-end;
-    overflow: hidden;
-  }
+	margin: 0 auto;
+	width: 40%;
+	height: 320px;
+	text-align: center;
+}
+
+.card-inner {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	transition: transform 0.6s;
+	transform-style: preserve-3d;
+}
+
+.card:hover .card-inner {
+	transform: rotateY(180deg);
+}
+
+.card-front,
+.card-back {
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+	border-radius: 8px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.card-front {
+	background-size: cover;
+	background-position: center center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: flex-end;
+	overflow: hidden;
+}
 
 .img4 {
-    background-image:url('im4.jpg');
-  }
+	background-image: url("/assets/im4.jpg");
+}
 
 .img5 {
-    background-image:url('im5.jpg');
-  }
+	background-image: url("/assets/im5.jpg");
+}
 
 .img6 {
-    background-image:url('im6.jpg');
-  }
+	background-image: url("/assets/im6.jpg");
+}
 
 .img7 {
-    background-image:url('im7.jpg');
-  }
-  
-  .card-front:before {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0px;
-    background: linear-gradient(0deg, black, transparent);
-  }
-  
-  .card-front .card-content {
-    z-index: 1;
-    
-    color:white;
-  }
-  
-  .card-front .card-content p {
-    color:#ececec;
-    margin: 16px;
-  }
-  
-  .card-back {
-    transform: rotateY(180deg);
-    background-color: #9E9E9E;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .card-back p {
-    margin:12px;
-    background-color: #9E9E9E;
-    color:#FFFFFF;
-    size: 20px;
-    font-weight: 600;
-  }
-  
-  .card-front {
-    transition: opacity .6s;
-  }
-  
-  .card:hover .card-front {
-    opacity:0;
-  }
+	background-image: url("/assets/im7.jpg");
+}
+
+.card-front:before {
+	content: "";
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0px;
+	background: linear-gradient(0deg, black, transparent);
+}
+
+.card-front .card-content {
+	z-index: 1;
+
+	color: white;
+}
+
+.card-front .card-content p {
+	color: #ececec;
+	margin: 16px;
+}
+
+.card-back {
+	transform: rotateY(180deg);
+	background-color: #9e9e9e;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
+.card-back p {
+	margin: 12px;
+	background-color: #9e9e9e;
+	color: #ffffff;
+	size: 20px;
+	font-weight: 600;
+}
+
+.card-front {
+	transition: opacity 0.6s;
+}
+
+.card:hover .card-front {
+	opacity: 0;
+}
